--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,15 @@
 name: test
-on: push
+on:
+  push
 jobs:
-　test:
+  test:
     runs-on: ubuntu-22.04
     container: ryuichiueda/ubuntu22.04-ros2:latest
-    steps:　
+    steps:
       - uses: actions/checkout@v2
       - name: build and test
         run: |
           rsync -av ./ /root/ros2_ws/src/mypkg/
           cd /root/ros2_ws
-          bash -xv ./src/mypkg/test/test.bash/root
+          bash -xv ./src/mypkg/test/test.bash /root
+
