--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,5 @@
 name: test
-on:
-  push
+on: push
 jobs:
   test:
     runs-on: ubuntu-22.04
@@ -11,5 +10,4 @@ jobs:
         run: |
           rsync -av ./ /root/ros2_ws/src/mypkg/
           cd /root/ros2_ws
-          bash -xv ./src/mypkg/test/test.bash /root
-
+          bash -xv ./src/mypkg/test/test.bash/ root   
