--- a/package.xml
+++ b/package.xml
@@ -6,10 +6,13 @@
   <description>ロボットシステム学の練習</description>
   <maintainer email="uchuutarou114@gmail.com">nkkn228</maintainer>
   <license>BSD-3-Clause</license>
+
+  <!-- 依存関係 -->
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>launch_ros</exec_depend>
 
+  <!-- テスト依存関係 -->
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
@@ -19,3 +22,4 @@
     <build_type>ament_python</build_type>
   </export>
 </package>
+
