--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,23 @@
 name: test
-on: push
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
 jobs:
   test:
     runs-on: ubuntu-22.04
-    container: ryuichiueda/ubuntu22.04-ros2:latest
+    container:
+      image: ryuichiueda/ubuntu22.04-ros2:latest
     steps:
       - uses: actions/checkout@v2
-      - name: build and test
+      - name: Build and Test
         run: |
-          rsync -av ./ /root/ros2_ws/src/mypkg/
+          mkdir -p /root/ros2_ws/src/mypkg
+          rsync -av ./ /root/ros2_ws/src/mypkg
           cd /root/ros2_ws
-          bash -xv ./src/mypkg/test/test.bash /root   
+          chmod +x ./src/mypkg/test/test.bash
+          bash -xv ./src/mypkg/test/test.bash /root
+
