--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,31 @@
 name: test
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
+on: push
 
 jobs:
   test:
     runs-on: ubuntu-22.04
-    container:
-      image: ryuichiueda/ubuntu22.04-ros2:latest
+    container: ryuichiueda/ubuntu22.04-ros2:latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build and Test
+      - name: build and test
         run: |
-          mkdir -p /root/ros2_ws/src/mypkg
-          rsync -av ./ /root/ros2_ws/src/mypkg
+          rsync -av ./ /root/ros2_ws/src/mypkg/
           cd /root/ros2_ws
-          chmod +x ./src/mypkg/test/test.bash
+
+          # ROS 2 環境を設定
+          echo "ROS 2 環境を設定中..."
+          if [ -f "/opt/ros/humble/setup.bash" ]; then
+            source /opt/ros/humble/setup.bash
+          elif [ -f "/opt/ros/foxy/setup.bash" ]; then
+            source /opt/ros/foxy/setup.bash
+          else
+            echo "ROS 2 環境の設定に失敗しました"
+            exit 1
+          fi
+
+          source install/local_setup.bash || { echo "ワークスペースの設定に失敗しました"; exit 1; }
+
+          # テストスクリプトの実行
           bash -xv ./src/mypkg/test/test.bash /root
 
